# c-fit-ai

./: .gitignore  .gitleaksignore  AGENTS.md  AGENT_GUIDE.md  CHANGELOG.md  COMMERCIAL_TARGET_STATE.md  DECISIONS.md  ENGINEERING_OVERVIEW.md  EVIDENCE_INDEX.md  EXPERIMENT_PLAN.md  FIRM_MODEL_PLAN.md  MARKET_MODEL_SPEC.md  OFFER_DISCOVERY_PLAN.md  POPULATION_MODEL_PLAN.md  PROMPT02_CONTINUITY_AUDIT.md  PROMPT03_CONTINUITY_AUDIT.md  PROMPT03_MASTER_PLAN.md  PROMPT03_PHASE_TRACKER.md  PROMPT05_CONTINUITY_AUDIT.md  PROMPT05_SURFACE_GAP_MAP.md  PROMPT05_VISUAL_FORENSICS.md  README.md  REJECTED_IDEAS.md  RESEARCH_METHODOLOGY.md  SCORING_FRAMEWORK.md  STATUS.md  TODO.md  pyproject.toml  task_rubric.md
HANDOFF/: NEXT_72_HOURS.md  PROMPT03_BUILD_STATUS.md  PROMPT03_EXECUTIVE_BRIEF.md  PROMPT03_NEXT_2_WEEKS.md  PROMPT05_BUILD_STATUS.md  PROMPT05_HARD_QUESTIONS.md  PROMPT05_MORNING_BRIEF.md  PROMPT05_NEXT_72_HOURS.md  PROMPT05_TOP_FINDINGS.md  PROMPT05_VISUAL_CHANGELOG.md  TOP_FINDINGS.md
alerts/: alerts_surface_v2.md  delta_alert_logic.md  prompt05_alert_surface_rebuild.md  saved_search_surface_v2.md
app/: __init__.py  inspector_cli.py
architecture/: analytics_events.md  api_contracts.md  background_jobs.md  data_model.md  last_visit_event_model.md  system_overview.md
contracts/: alert.schema.yaml  buying_center.schema.yaml  employer_profile.schema.yaml  experiment.schema.yaml  firm_entity.schema.yaml  household_entity.schema.yaml  job_posting.schema.yaml  offer.schema.yaml  population_entity.schema.yaml  scorecard.schema.yaml  seeker_profile.schema.yaml  (+1 more)
product/: jtbd.md  (+4 more)
(+801 files in other folders)
